frame/support/test/tests/pallet_ui/pallet_doc_invalid_arg.stderr
error: The `pallet_doc` attribute must receive arguments as a list. Supported format: `pallet_doc(PATH)`
 --> tests/pallet_ui/pallet_doc_invalid_arg.rs:3:1
  |
3 | #[pallet_doc = "invalid"]
  | ^
